fixed missing text on mobile

--- a/app/frontend/src/App/Containers/Select/styles.scss
+++ b/app/frontend/src/App/Containers/Select/styles.scss
@@ -51,7 +51,6 @@
       @include respond(mobile) {
         text-align: center;
         margin: 0 0 2rem 0 !important;
-        padding: 0 1.2rem;
         width: 100%;
         font-size: 2.4rem !important;
         line-height: 1.42;
@@ -82,12 +81,7 @@
         display: flex;
         justify-content: space-between;
         @include respond(mobile) {
-          justify-content: left;
-        }
-        &-text {
-          @include respond(mobile) {
-            display: none;
-          }
+          flex-direction: column;
         }
       }
     }
